--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,8 +19,11 @@
   left: 0;
   height: 50px;
   overflow: hidden;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6,
-    0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6,
+  box-shadow:
+    0 1px 1px rgba(0, 0, 0, 0.2),
+    0 8px 0 -3px #f6f6f6,
+    0 9px 1px -3px rgba(0, 0, 0, 0.2),
+    0 16px 0 -6px #f6f6f6,
     0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
@@ -32,47 +35,8 @@
   font-weight: 300;
 }
 
-.filters {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  right: 0;
-  left: 0;
-}
-
-.filters li {
-  display: inline;
-  cursor: default;
-}
-
-.filters li button {
-  display: inline-block;
-  color: inherit;
-  margin: 3px;
-  padding: 3px 7px;
-  text-decoration: none;
-  border: 1px solid transparent;
-  border-radius: 3px;
-}
-
-.filters li button:not(.selected) {
-  cursor: pointer;
-}
-
-.filters li:hover button {
-  border-color: rgba(175, 47, 47, 0.1);
-}
-
-.filters li button.selected {
-  border-color: rgba(175, 47, 47, 0.2);
-}
-
 @media (max-width: 430px) {
   .footer {
     height: 50px;
-  }
-
-  .filters {
-    bottom: 10px;
   }
 }
