--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -48,13 +48,13 @@
           Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
           IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
       */
-  background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E");
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
   background-repeat: no-repeat;
   background-position: center left;
 }
 
 .todo-list li .toggle:checked + label {
-  background-image: url("data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E");
+  background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
 .todo-list li label {
@@ -70,6 +70,10 @@
 }
 
 .todo-list li label .description {
+  font-size: 13px;
+  color: gray;
+}
+.todo-list li label .title {
   word-break: break-all;
   display: block;
   line-height: 1.2;
@@ -77,8 +81,7 @@
   font-weight: 400;
   color: #4d4d4d;
 }
-
-.todo-list li.completed label .description {
+.todo-list li.completed label .title {
   color: #cdcdcd;
   text-decoration: line-through;
 }
@@ -105,7 +108,7 @@
 }
 
 .todo-list li .icon-destroy:after {
-  content: "×";
+  content: '×';
 }
 
 .todo-list li .icon-edit {
@@ -114,9 +117,30 @@
 }
 
 .todo-list li .icon-edit:after {
-  content: "✎";
+  content: '✎';
+}
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+  font-size: 18px;
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  left: 326px;
+  bottom: 8px;
 }
 
+.todo-list li .icon-play {
+  font-size: 15px;
+  left: 310px;
+}
+
+.icon-pause:after {
+  content: url(../../images/pause-svgrepo-com.svg);
+}
+
+.icon-play:after {
+  content: url(../../images/play-button-svgrepo-com.svg);
+}
 .todo-list li .edit {
   display: none;
 }
